chore(demos-updates): updated demo layouts to current spec

--- a/src/patternfly/demos/Card/templates/card-demo--notification-drawer.hbs
+++ b/src/patternfly/demos/Card/templates/card-demo--notification-drawer.hbs
@@ -9,31 +9,41 @@
                 {{#> l-flex-item l-flex-item--modifier="pf-m-spacer-md"}}
                   <span>Notifications</span>
                 {{/l-flex-item}}
-                {{> label
-                    label--id="default-red-icon"
-                    label--color="red"
-                    label-text--value="1"
-                    label-icon--value="exclamation-circle"}}
-                {{> label
-                    label--id="default-orange-icon"
-                    label--color="orange"
-                    label-text--value="3"
-                    label-icon--value="exclamation-triangle"}}
-                {{> label
-                    label--id="default-green-icon"
-                    label--color="green"
-                    label-text--value="3"
-                    label-icon--value="check-circle"}}
-                {{> label
-                    label--id="default-blue-icon"
-                    label--color="blue"
-                    label-text--value="3"
-                    label-icon--value="info-circle"}}
-                {{> label
-                    label--id="default-blue-icon"
-                    label--color="teal"
-                    label-text--value="3"
-                    label-icon--value="bell"}}
+                {{#> l-flex-item}}
+                  {{> label
+                      label--id="default-red-icon"
+                      label--color="red"
+                      label-text--value="1"
+                      label-icon--value="exclamation-circle"}}
+                {{/l-flex-item}}
+                {{#> l-flex-item}}
+                  {{> label
+                      label--id="default-orange-icon"
+                      label--color="orange"
+                      label-text--value="3"
+                      label-icon--value="exclamation-triangle"}}
+                  {{/l-flex-item}}
+                {{#> l-flex-item}}
+                  {{> label
+                      label--id="default-green-icon"
+                      label--color="green"
+                      label-text--value="3"
+                      label-icon--value="check-circle"}}
+                {{/l-flex-item}}
+                {{#> l-flex-item}}
+                  {{> label
+                      label--id="default-blue-icon"
+                      label--color="blue"
+                      label-text--value="3"
+                      label-icon--value="info-circle"}}
+                {{/l-flex-item}}
+                {{#> l-flex-item}}
+                  {{> label
+                      label--id="default-blue-icon"
+                      label--color="teal"
+                      label-text--value="3"
+                      label-icon--value="bell"}}
+                {{/l-flex-item}}
               {{/l-flex}}
             {{/notification-drawer-group-toggle-title}}
           {{/l-flex}}
