--- a/src/patternfly/demos/Card/templates/card-template-data-list.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-data-list.hbs
@@ -17,8 +17,12 @@
             {{#> data-list-cell data-list-cell--modifier="pf-m-no-fill pf-m-align-right"}}
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
-                  <span>3</span>
-                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{#> l-flex-item}}
+                    <span>3</span>
+                  {{/l-flex-item}}
+                  {{#> l-flex-item}}
+                    <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{/l-flex-item}}
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
@@ -34,8 +38,12 @@
             {{#> data-list-cell data-list-cell--modifier="pf-m-no-fill pf-m-align-right"}}
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
-                  <span>8</span>
-                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{#> l-flex-item}}
+                    <span>8</span>
+                  {{/l-flex-item}}
+                  {{#> l-flex-item}}
+                    <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{/l-flex-item}}
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
@@ -51,8 +59,12 @@
             {{#> data-list-cell data-list-cell--modifier="pf-m-no-fill pf-m-align-right"}}
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
-                  <span>20</span>
-                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{#> l-flex-item}}
+                    <span>20</span>
+                  {{/l-flex-item}}
+                  {{#> l-flex-item}}
+                    <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{/l-flex-item}}
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
@@ -68,8 +80,12 @@
             {{#> data-list-cell data-list-cell--modifier="pf-m-no-fill pf-m-align-right"}}
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
-                  <span>12</span>
-                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{#> l-flex-item}}
+                    <span>12</span>
+                  {{/l-flex-item}}
+                  {{#> l-flex-item}}
+                    <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{/l-flex-item}}
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
@@ -85,8 +101,12 @@
             {{#> data-list-cell data-list-cell--modifier="pf-m-no-fill pf-m-align-right"}}
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
-                  <span>18</span>
-                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{#> l-flex-item}}
+                    <span>18</span>
+                  {{/l-flex-item}}
+                  {{#> l-flex-item}}
+                    <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
+                  {{/l-flex-item}}
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
