--- a/src/patternfly/demos/Card/templates/card-template-status.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-status.hbs
@@ -97,47 +97,49 @@
                 {{#> l-flex-item l-flex-item--modifier="pf-m-spacer-md"}}
                   Notifications
                 {{/l-flex-item}}
-                {{#> label-group label-group--id="label-group-notifications"}}
-                  {{#> label-group-main}}
-                    {{#> label-group-list label-group-list--attribute='aria-label="Group of labels"'}}
-                      {{#> label-group-list-item}}
-                        {{> label
-                            label--id="default-red-icon"
-                            label--color="red"
-                            label-text--value="1"
-                            label-icon--value="exclamation-circle"}}
-                      {{/label-group-list-item}}
-                      {{#> label-group-list-item}}
-                        {{> label
-                            label--id="default-orange-icon"
-                            label--color="orange"
-                            label-text--value="1"
-                            label-icon--value="exclamation-circle"}}
-                      {{/label-group-list-item}}
-                      {{#> label-group-list-item}}
-                        {{> label
-                            label--id="default-green-icon"
-                            label--color="green"
-                            label-text--value="3"
-                            label-icon--value="check-circle"}}
-                      {{/label-group-list-item}}
-                      {{#> label-group-list-item}}
-                        {{> label
-                            label--id="default-blue-icon"
-                            label--color="blue"
-                            label-text--value="3"
-                            label-icon--value="info-circle"}}
-                      {{/label-group-list-item}}
-                      {{#> label-group-list-item}}
-                        {{> label
-                            label--id="default-teal-icon"
-                            label--color="teal"
-                            label-text--value="3"
-                            label-icon--value="bell"}}
-                      {{/label-group-list-item}}
-                    {{/label-group-list}}
-                  {{/label-group-main}}
-                {{/label-group}}
+                {{#> l-flex-item}}
+                  {{#> label-group label-group--id="label-group-notifications"}}
+                    {{#> label-group-main}}
+                      {{#> label-group-list label-group-list--attribute='aria-label="Group of labels"'}}
+                        {{#> label-group-list-item}}
+                          {{> label
+                              label--id="default-red-icon"
+                              label--color="red"
+                              label-text--value="1"
+                              label-icon--value="exclamation-circle"}}
+                        {{/label-group-list-item}}
+                        {{#> label-group-list-item}}
+                          {{> label
+                              label--id="default-orange-icon"
+                              label--color="orange"
+                              label-text--value="1"
+                              label-icon--value="exclamation-circle"}}
+                        {{/label-group-list-item}}
+                        {{#> label-group-list-item}}
+                          {{> label
+                              label--id="default-green-icon"
+                              label--color="green"
+                              label-text--value="3"
+                              label-icon--value="check-circle"}}
+                        {{/label-group-list-item}}
+                        {{#> label-group-list-item}}
+                          {{> label
+                              label--id="default-blue-icon"
+                              label--color="blue"
+                              label-text--value="3"
+                              label-icon--value="info-circle"}}
+                        {{/label-group-list-item}}
+                        {{#> label-group-list-item}}
+                          {{> label
+                              label--id="default-teal-icon"
+                              label--color="teal"
+                              label-text--value="3"
+                              label-icon--value="bell"}}
+                        {{/label-group-list-item}}
+                      {{/label-group-list}}
+                    {{/label-group-main}}
+                  {{/label-group}}
+                {{/l-flex-item}}
               {{/l-flex}}
             {{/notification-drawer-group-toggle-title}}
             {{> notification-drawer-group-toggle-icon}}
