--- a/src/patternfly/components/Banner/banner.scss
+++ b/src/patternfly/components/Banner/banner.scss
@@ -20,9 +20,7 @@
   --#{$banner}--link--Color: var(--#{$banner}--Color);
   --#{$banner}--link--TextDecoration: underline;
   --#{$banner}--link--hover--Color: var(--#{$banner}--Color);
-  --#{$banner}--link--hover--FontWeight: var(--pf-t--global--font--weight--body--bold);
-  --#{$banner}--link--disabled--Color: var(--#{$banner}--Color);
-  --#{$banner}--link--disabled--TextDecoration: none;
+  --#{$banner}--link--disabled--Color: var(--pf-t--global--text--color--disabled);
 
   // modifier variables
   --#{$banner}--m-sticky--ZIndex: var(--pf-t--global--z-index--md);
@@ -148,14 +146,11 @@
 
     &:hover:not(.pf-m-disabled) {
       --#{$banner}--link--Color: var(--#{$banner}--link--hover--Color);
-
-      font-weight: var(--#{$banner}--link--hover--FontWeight);
     }
 
     // stylelint-disable selector-no-qualifying-type
     &.pf-m-disabled {
       --#{$banner}--link--Color: var(--#{$banner}--link--disabled--Color);
-      --#{$banner}--link--TextDecoration: var(--#{$banner}--link--disabled--TextDecoration);
 
       cursor: not-allowed;
     }
@@ -164,21 +159,13 @@
 
   .#{$button}.pf-m-inline {
     --#{$button}--m-link--Color: var(--#{$banner}--link--Color);
-    --#{$button}--m-link--m-inline--hover--Color: var(--#{$banner}--link--hover--Color);
+    --#{$button}--m-link--hover--Color: var(--#{$banner}--link--hover--Color);
     --#{$button}--disabled--Color: var(--#{$banner}--link--disabled--Color);
 
     text-decoration: var(--#{$banner}--link--TextDecoration);
 
-    &:hover {
-      --#{$banner}--link--Color: var(--#{$banner}--link--hover--Color);
-
-      font-weight: var(--#{$banner}--link--hover--FontWeight);
-    }
-
     &:disabled,
     &.pf-m-disabled {
-      --#{$banner}--link--TextDecoration: var(--#{$banner}--link--disabled--TextDecoration);
-
       cursor: not-allowed;
     }
   }
