--- a/src/patternfly/components/Timestamp/timestamp.scss
+++ b/src/patternfly/components/Timestamp/timestamp.scss
@@ -2,13 +2,14 @@
 
 :where(:root, .#{$timestamp}) {
   --#{$timestamp}--FontSize: var(--pf-t--global--font--size--body--sm);
-  --#{$timestamp}--Color: var(--pf-t--global--text--color--subtle);
+  --#{$timestamp}--Color: var(--pf-t--global--text--color--regular);
   --#{$timestamp}--OutlineOffset: #{pf-size-prem(3px)};
 
   // Help text variables for the timestamp
   --#{$timestamp}--m-help-text--TextDecorationLine: var(--pf-t--global--text-decoration--help-text--line--default);
   --#{$timestamp}--m-help-text--TextDecorationStyle: var(--pf-t--global--text-decoration--help-text--style--default);
   --#{$timestamp}--m-help-text--TextUnderlineOffset: #{pf-size-prem(4px)};
+  --#{$timestamp}--m-help-text--Color: var(--pf-t--global--text--color--subtle);
   --#{$timestamp}--m-help-text--hover--Color: var(--pf-t--global--text--color--regular);
   --#{$timestamp}--m-help-text--hover--TextDecorationLine: var(--pf-t--global--text-decoration--help-text--line--hover);
   --#{$timestamp}--m-help-text--hover--TextDecorationStyle: var(--pf-t--global--text-decoration--help-text--style--hover);
@@ -21,6 +22,8 @@
   outline-offset: var(--#{$timestamp}--OutlineOffset);
 
   &.pf-m-help-text {
+    --#{$timestamp}--Color: var(--#{$timestamp}--m-help-text--Color);
+    
     text-decoration: var(--#{$timestamp}--m-help-text--TextDecorationLine) var(--#{$timestamp}--m-help-text--TextDecorationStyle);
     text-underline-offset: var(--#{$timestamp}--m-help-text--TextUnderlineOffset);
     cursor: pointer;
