--- a/src/patternfly/layouts/Flex/flex.scss
+++ b/src/patternfly/layouts/Flex/flex.scss
@@ -96,7 +96,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         column-gap: var(--#{$flex}--spacer--column--base);
         align-items: normal;
 
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block-start: 0;
@@ -111,7 +111,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         flex-direction: column-reverse;
         align-items: normal;
 
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block-start: var(--#{$flex}--spacer--row);
@@ -127,7 +127,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         align-items: var(--#{$flex}--m-row--AlignItems);
 
         // unset styling set for .pf-m-column
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block-start: 0;
@@ -143,7 +143,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         align-items: var(--#{$flex}--m-row-reverse--AlignItems);
 
         // unset styling set for .pf-m-column
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block-start: 0;
@@ -315,7 +315,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
     @include pf-v6-apply-breakpoint($breakpoint) {
       @each $spacer, $spacer-value in $pf-v6-l-flex--spacer-map {
         &.pf-m-space-items-#{$spacer}#{$breakpoint-name} {
-          > .#{$flex} > .#{$flex},
+          > .#{$flex},
           > .#{$flex}__group,
           > .#{$flex}__item {
             --#{$flex}--spacer: var(#{map-get($pf-v6-l-flex--variable-map, $spacer-value)});
@@ -366,7 +366,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
       }
 
       &#{$pf-v6-l-flex--gap--selectors} {
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block: 0;
@@ -394,7 +394,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
       }
 
       &#{$pf-v6-l-flex--row-gap--selectors} {
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block: 0;
@@ -421,7 +421,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
       }
 
       &#{$pf-v6-l-flex--column-gap--selectors} {
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin: 0;
