fix(flex): removed :flex > :flex > :flex

--- a/src/patternfly/layouts/Flex/flex.scss
+++ b/src/patternfly/layouts/Flex/flex.scss
@@ -97,7 +97,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         flex-direction: column;
         align-items: normal;
 
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block-start: 0;
@@ -112,7 +112,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         flex-direction: column-reverse;
         align-items: normal;
 
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block-start: var(--#{$flex}--spacer--row);
@@ -128,7 +128,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         align-items: var(--#{$flex}--m-row--AlignItems);
 
         // unset styling set for .pf-m-column
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block-start: 0;
@@ -144,7 +144,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         align-items: var(--#{$flex}--m-row-reverse--AlignItems);
 
         // unset styling set for .pf-m-column
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin-block-start: 0;
@@ -316,7 +316,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
     @include pf-v6-apply-breakpoint($breakpoint) {
       @each $spacer, $spacer-value in $pf-v6-l-flex--spacer-map {
         &.pf-m-space-items-#{$spacer}#{$breakpoint-name} {
-          > .#{$flex} > .#{$flex},
+          > .#{$flex},
           > .#{$flex}__group,
           > .#{$flex}__item {
             --#{$flex}--spacer: var(#{map-get($pf-v6-l-flex--variable-map, $spacer-value)});
@@ -367,10 +367,11 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         }
 
         &#{$pf-v6-l-flex--gap--selectors} {
-          > .#{$flex} > .#{$flex},
+          > .#{$flex},
           > .#{$flex}__group,
           > .#{$flex}__item {
-            margin: 0;
+            margin-block: 0;
+            margin-inline: 0;
           }
         }
       }
@@ -394,7 +395,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
       }
 
       &#{$pf-v6-l-flex--row-gap--selectors} {
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin: 0;
@@ -421,7 +422,7 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
       }
 
       &#{$pf-v6-l-flex--column-gap--selectors} {
-        > .#{$flex} > .#{$flex},
+        > .#{$flex},
         > .#{$flex}__group,
         > .#{$flex}__item {
           margin: 0;
