fix(fa-wildcard): converted @import to @use, removed *

--- a/src/patternfly/base/patternfly-fa-icons.scss
+++ b/src/patternfly/base/patternfly-fa-icons.scss
@@ -1,9 +1,6 @@
 // Font Awesome 5 icons https://fontawesome.com
 @use '../sass-utilities' as *;
-
-%pf-fa-local {
-  @import "../assets/fontawesome/fontawesome";
-}
+@use "../assets/fontawesome/fontawesome";
 
 @if not($pf-v6-global--disable-fontawesome) {
   @if $pf-v6-global--enable-fontawesome-cdn {
@@ -27,9 +24,5 @@
       font-weight: 900;
     }
     // stylelint-enable
-
-    * {
-      @extend %pf-fa-local;
-    }
   }
 }
