fix(expandable-section): adjust styles, icon, update screenshots (#7006)
* fix(expandable-section): adjust styles, icon, update screenshots
* chore(backstop): add screenshots

--- a/src/patternfly/components/MultipleFileUpload/multiple-file-upload-status-progress-icon.hbs
+++ b/src/patternfly/components/MultipleFileUpload/multiple-file-upload-status-progress-icon.hbs
@@ -2,5 +2,6 @@
   {{#if multiple-file-upload-status-progress-icon--attribute}}
     {{{multiple-file-upload-status-progress-icon--attribute}}}
   {{/if}}>
-  <i class="pf-v6-pficon pf-v6-pficon-in-progress"></i>
+  {{! <i class="pf-v6-pficon pf-v6-pficon-in-progress"></i> - TODO - convert back to this pficon when pficons render well again}}
+  <i class="fas fa-spinner" aria-hidden="true"></i>
 </div>
