fix(table): updated thead td to th (#6689)

--- a/src/patternfly/components/MenuToggle/menu-toggle.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle.hbs
@@ -73,7 +73,7 @@
   {{/if}}>
   {{#if menu-toggle--IsCheck}}
     {{> check
-        check--id=(concat menu-toggle--id '-check')
+        check--id=(dasherize menu-toggle--id 'check')
         check--IsLabelWrapped=true
         check--IsStandalone=true
       }}
