--- a/src/patternfly/components/Table/Tree-table/table-tree-view--basic.hbs
+++ b/src/patternfly/components/Table/Tree-table/table-tree-view--basic.hbs
@@ -1,11 +1,12 @@
-{{#> table table--IsTree-view="true"
+{{#>table
+    table--IsTree-view=true
     table--HasActions=table-tree-view--HasActions
     table--HasCheckboxes=table-tree-view--HasCheckboxes
     table--HasIcons=table-tree-view--HasIcons
     table--HasNoPosinset=table-tree-view--HasNoPosinset
   }}
-  {{#> table-thead table-tr--IsExpanded=true}}
-    {{#> table-tr newcontext table--HasActions=table-tree-view--HasActions}}
+  {{#> table-thead table-tr--HasNoPosinset=true}}
+    {{#> table-tr table--HasActions=table-tree-view--HasActions}}
       {{#> table-th table-th--attribute='scope="col"' table-th--modifier=(prefix 'table__tree-view-title-header-cell')}}
         Name
       {{/table-th}}
@@ -20,10 +21,8 @@
       {{/table-th}}
 
       {{!-- TODO: fix this after merge --}}
-      {{#if table--HasActions}}
-        {{#> table-th table-th--IsEmpty=true}}
-          {{> screen-reader screen-reader--text=table-cell--text}}
-        {{/table-th}}
+      {{#if table-tree-view--HasActions}}
+        {{> table-cell-empty table-cell--text='Actions'}}
       {{/if}}
     {{/table-tr}}
   {{/table-thead}}
