--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -144,7 +144,7 @@
       --#{$menu}--PaddingBlockEnd: 0;
       --#{$menu}--BackgroundColor: var(--#{$nav}--BackgroundColor);
       --#{$menu}--BoxShadow: none;
-      --#{$menu}__list-item--hover--BackgroundColor: var(--pf-v6-c-nav__link--hover--BackgroundColor);
+      --#{$menu}__list-item--hover--BackgroundColor: var(--#{$nav}__link--hover--BackgroundColor);
 
       .#{$menu}__list {
         row-gap: var(--#{$nav}__subnav--RowGap);
