--- a/src/patternfly/sass-utilities/mixins.scss
+++ b/src/patternfly/sass-utilities/mixins.scss
@@ -195,34 +195,34 @@
 
 @mixin pf-v6-hidden-visible($val: "block") {
   // stylelint-disable-next-line
-  --pf-v6-hidden-visible--visible--Display: #{$val};
+  --#{$pf-prefix}hidden-visible--visible--Display: #{$val};
 
   // base value for visible display property is set to 'block' by default and passed in to
   // placeholder via `pf-v6-hidden-visible` mixin
 
   // set hidden var values
   // stylelint-disable custom-property-pattern
-  --pf-v6-hidden-visible--hidden--Display: none;
+  --#{$pf-prefix}hidden-visible--hidden--Display: none;
 
   // set visibile var values
-  --pf-v6-hidden-visible--Display: var(--pf-v6-hidden-visible--visible--Display);
+  --#{$pf-prefix}hidden-visible--Display: var(--#{$pf-prefix}hidden-visible--visible--Display);
 
   // set default state to visible
-  display: var(--pf-v6-hidden-visible--Display);
+  display: var(--#{$pf-prefix}hidden-visible--Display);
 
   // toggle values based on state
   &.pf-m-hidden {
-    --pf-v6-hidden-visible--Display: var(--pf-v6-hidden-visible--hidden--Display);
+    --#{$pf-prefix}hidden-visible--Display: var(--#{$pf-prefix}hidden-visible--hidden--Display);
   }
 
   @each $size, $bp in $pf-v6-global--breakpoint-name-map {
     @media screen and (min-width: $bp) {
       &.pf-m-hidden-on-#{$size} {
-        --pf-v6-hidden-visible--Display: var(--pf-v6-hidden-visible--hidden--Display);
+        --#{$pf-prefix}hidden-visible--Display: var(--#{$pf-prefix}hidden-visible--hidden--Display);
       }
 
       &.pf-m-visible-on-#{$size} {
-        --pf-v6-hidden-visible--Display: var(--pf-v6-hidden-visible--visible--Display);
+        --#{$pf-prefix}hidden-visible--Display: var(--#{$pf-prefix}hidden-visible--visible--Display);
       }
     }
   }
