--- a/src/patternfly/demos/Drawer/examples/drawer-jump-links.hbs
+++ b/src/patternfly/demos/Drawer/examples/drawer-jump-links.hbs
@@ -8,9 +8,7 @@
           {{#> sidebar-panel sidebar-panel--modifier="pf-m-sticky pf-m-gutter"}}
             {{#> page-main-section}}
               {{#> jump-links jump-links--IsExpandable="true" jump-links--modifier="pf-m-vertical pf-m-non-expandable-on-md"}}
-                {{#> jump-links-label}}
-                  Jump to section
-                {{/jump-links-label}}
+                {{> jump-links-header}}
                 {{> jump-links-template-list}}
               {{/jump-links}}
             {{/page-main-section}}
